# symmetric_synthetic

./: .gitignore  LICENSE  README.md  data_process.py  pyproject.toml  shape_generate.py
.github/workflows/: ci.yaml  lint.yaml
images/: noisy_dataset.png.license
symmetric_synthetic/: __init__.py  data_process.py  shape_generate.py
tests/: test_single_circle.py
