[tool.poetry]
name = "symmetric_synthetic"
version = "0.1.0"
description = "create symmetrical objects in synthetic images and their corresponding mask"
authors = ["Danush Kumar Venkatesh","Peter Steinbach"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/danushv07/symmetric_synthetic"
packages = [
    { include = "symmetric_synthetic" },
    #{ include = "extra_package/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.8"
scikit-image = "^0.17.2"
scipy = "^1.4.1"
pillow = "^9.1.0"
numpy = "^1.21.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
reuse = "^1.0.0"


[tool.poetry.scripts]
symmsyn = 'symmetric_synthetic.data_process:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
